# gameCountdown

./: .gitignore  CLAUDE.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/almenara/gamecountdown/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/almenara/gamecountdown/ui/busca/: BuscaScreenInstrumentedTest.kt
app/src/androidTest/java/com/almenara/gamecountdown/ui/catalogo/: CatalogoScreenInstrumentedTest.kt
app/src/androidTest/java/com/almenara/gamecountdown/ui/comum/: GameCardInstrumentedTest.kt
app/src/androidTest/java/com/almenara/gamecountdown/ui/detalhes/: DetalhesScreenInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/almenara/gamecountdown/: MainActivity.kt
app/src/main/java/com/almenara/gamecountdown/di/: AppContainer.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/almenara/gamecountdown/: ExampleUnitTest.kt
backend/: README.md  database.py  main.py  pyproject.toml
backend/models/: __init__.py  enums.py  game.py  schemas.py
backend/repositories/: __init__.py  game_repository.py
backend/tests/: test_game_model.py  test_game_schema.py
docs/: diagrama-classes.md  diagrama.md  game-countdown-app-spec.md  handoff-claude-code.md  handoff-fase3.md  pesquisa-glance-spike.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+59 files in other folders)
